--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.0.0-alpha.7",
     "@iconify/react": "^3.1.3",
+    "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@mui/utils": "^5.4.2",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.33.1",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
@@ -55,10 +59,15 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.4",
@@ -69,14 +78,11 @@
     "@babel/eslint-parser": "^7.17.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.4.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
