--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bootstrap": "^5.1.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
     "history": "^5.2.0",
